--- a/veli/Podfile
+++ b/veli/Podfile
@@ -4,7 +4,7 @@ pod 'AFNetworking', :inhibit_warnings => true
 pod 'SDWebImage', '~> 3.6'
 pod 'Reachability', '~> 3.1'
 pod 'MagicalRecord', :inhibit_warnings => true
-pod 'Facebook-iOS-SDK', '4.0'
+pod 'Facebook-iOS-SDK', '~> 4.0', :inhibit_warnings => true
 pod 'VideoCore', '0.3.0', :inhibit_warnings => true
 pod 'EventSource', '~> 1.0.0'
 pod 'ReactiveCocoa', '~> 2.5'
